Fix for console overflow-x problem.

--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -29,6 +29,7 @@ body {
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
     border-radius: 5px;
+    overflow-x: scroll;
 }
 
 .grey-text {
